--- a/Modulo-1/Bloco-03/3: HTML & CSS - Seletores e posicionamento/Combinações e Classes Descendentes/style.css
+++ b/Modulo-1/Bloco-03/3: HTML & CSS - Seletores e posicionamento/Combinações e Classes Descendentes/style.css
@@ -22,11 +22,18 @@ h1, h2, h3, h4, h5, h6 {
   color: red;
 }
 
-h1 em, h2 em, h3 em, h4 em, h5 em, h6 em {
+:is(h1, h2, h3, h4, h5, h6) :is(em) {
   font-size: 40px;
   border: 1px solid black;
 }
 
-ul#programacao li:nth-child(1), ul#programacao li:nth-child(2), ul#programacao li:nth-child(3) {
+/* ul#programacao li:nth-child(1), ul#programacao li:nth-child(2), ul#programacao li:nth-child(3) {
   color:blue;
+} */
+:is(ul#programacao) li:is(:nth-child(1), :nth-child(2),  :nth-child(3)){
+  color:blue;
+}
+
+:is(ul#programacao) li:is(:nth-child(2), :nth-child(3)) {
+  background-color: pink;
 }
